--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -1,1 +1,45 @@
-<p>heroes works!</p>
+<h1>Listado de Heroes</h1>
+
+<hr>
+
+<div class="row">
+    <div class="col text-end">
+        <button class="btn btn-primary " routerLink="/heroe/nuevo">
+        <i class="fas fa-plus-circle"> Agregar</i>
+    </button></div>
+</div>
+<table class="table mt-5">
+    <thead>
+        <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Poder</th>
+            <th scope="col">Vivo</th>
+            <th scope="col">Tools</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>@mdo</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="alert alert-info text-center mt-3" role="alert">
+    <h4 class="alert-heading">Cargando</h4>
+    <p>
+        <i class="fas fa-sync-alt fa-spin fa-2x"></i>
+    </p>
+    <p class="mb-0">
+        Espere porfavor
+    </p>
+</div>
+
+<div class="alert alert-warning text-center mt-3" role="alert">
+    <h4 class="alert-heading">No hay registros</h4>
+    <p>
+        <i class="fas fa-exclamation fa-2x"></i>
+    </p>
+</div>
