--- a/src/app/pages/horeo/heroe.component.html
+++ b/src/app/pages/horeo/heroe.component.html
@@ -1,1 +1,61 @@
-<p>horeo works!</p>
+<h1>Heroe <small>Nombre del Heroe</small></h1>
+
+<hr>
+
+<div class="row">
+    <div class="col text-end">
+        <button class="btn btn-danger " routerLink="/heroes">
+            <i class="fas fa-arrow-left">Regresar</i>
+    </button></div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <form action="">
+            <div class="form-group">
+                <label> Firebase ID </label>
+                <input type="text" name="" id="" class="form-control" disabled="disabled" placeholder="FIREBASE ID">
+            </div>
+        </form>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <form action="">
+            <div class="form-group">
+                <label>  Nombre </label>
+                <input type="text" name="" id="" class="form-control" placeholder="Nombre del hero" required>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <form action="">
+            <div class="form-group">
+                <label>  Poder </label>
+                <input type="text" name="" id="" class="form-control" placeholder="Poder del hero" required>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="form-group">
+    <label>Estado</label>
+    <br>
+    <button class="btn btn-outline-success w-50" type="button">
+        <i class="fas fa-smile-wink">Vivo</i>
+
+    </button>
+    <button class="btn btn-outline-danger w-50" type="button">
+        <i class="fas fa-dizzy">Tieso</i>
+
+    </button>
+</div>
+<hr>
+
+<div class="form-group text-end">
+
+    <button type="submit" class="btn btn-primary w-25">
+        <i class="fas fa-save">Guardar</i>
+    </button>
+</div>
