--- a/src/app/pages/horeo/heroe.component.html
+++ b/src/app/pages/horeo/heroe.component.html
@@ -11,51 +11,62 @@
 
 <div class="row">
     <div class="col">
-        <form action="">
+        <form (ngSubmit)="guardar(forma)" #forma="ngForm">
             <div class="form-group">
                 <label> Firebase ID </label>
-                <input type="text" name="" id="" class="form-control" disabled="disabled" placeholder="FIREBASE ID">
+                <input type="text" 
+                class="form-control" 
+                disabled="disabled" 
+                [(ngModel)]="heroe.id"
+                name="id"
+                placeholder="FIREBASE ID">
             </div>
-        </form>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <form action="">
+    
             <div class="form-group">
                 <label>  Nombre </label>
-                <input type="text" name="" id="" class="form-control" placeholder="Nombre del hero" required>
+                <input type="text" 
+                name="nombre" 
+                class="form-control" 
+                placeholder="Nombre del hero" 
+                [(ngModel)]="heroe.nombre"
+                required>
             </div>
-        </form>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <form action="">
+
             <div class="form-group">
                 <label>  Poder </label>
-                <input type="text" name="" id="" class="form-control" placeholder="Poder del hero" required>
+                <input type="text" 
+                name="poder"
+                class="form-control" 
+                placeholder="Poder del hero" 
+                [(ngModel)]="heroe.poder"
+                required>
             </div>
-        </form>
-    </div>
-</div>
-<div class="form-group">
-    <label>Estado</label>
-    <br>
-    <button class="btn btn-outline-success w-50" type="button">
+
+     <div class="form-group">
+     <label>Estado</label>
+     <br>
+     <button *ngIf="heroe.vivo"
+            (click)="heroe.vivo = false"
+        class="btn btn-outline-success w-50" 
+        type="button">
         <i class="fas fa-smile-wink">Vivo</i>
 
-    </button>
-    <button class="btn btn-outline-danger w-50" type="button">
+     </button>
+     <button *ngIf="!heroe.vivo"
+            (click)="heroe.vivo = true" 
+            class="btn btn-outline-danger w-50" 
+            type="button">
         <i class="fas fa-dizzy">Tieso</i>
-
-    </button>
-</div>
-<hr>
-
-<div class="form-group text-end">
-
-    <button type="submit" class="btn btn-primary w-25">
+      </button>
+     </div>
+        <hr>
+     <div class="form-group text-end">
+        <button type="submit" class="btn btn-primary w-25">
         <i class="fas fa-save">Guardar</i>
-    </button>
+        </button>
+     </div> 
+        </form>
+     </div>
 </div>
+
+
