--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -10,19 +10,22 @@
 </div>
 <table class="table mt-5">
     <thead>
-        <tr>
+        <tr><th scope="col">#</th>
             <th scope="col">Nombre</th>
             <th scope="col">Poder</th>
             <th scope="col">Vivo</th>
-            <th scope="col">Tools</th>
+            <!-- <th scope="col">Tools</th> -->
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>@mdo</td>
+        <tr  *ngFor="let heroe of heroes; let i = index">
+            <th scope="row">{{ i+1 }}</th>
+            <td>{{ heroe.nombre }}</td>
+            <td>{{ heroe.poder }}</td>
+            <td>
+                <span *ngIf="heroe.vivo" class="badge bg-success">Vivo</span>
+                <span *ngIf="!heroe.vivo" class="badge bg-danger">Muerto</span>
+            <!-- <td>{{ heroe.nombre }}</td> -->
         </tr>
     </tbody>
 </table>
