--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -8,13 +8,13 @@
         <i class="fas fa-plus-circle"> Agregar</i>
     </button></div>
 </div>
-<table class="table mt-5">
+<table class="table mt-5" *ngIf="!cargando">
     <thead>
         <tr><th scope="col">#</th>
             <th scope="col">Nombre</th>
             <th scope="col">Poder</th>
             <th scope="col">Vivo</th>
-            <!-- <th scope="col">Tools</th> -->
+            <th scope="col">Tools</th>
         </tr>
     </thead>
     <tbody>
@@ -25,12 +25,25 @@
             <td>
                 <span *ngIf="heroe.vivo" class="badge bg-success">Vivo</span>
                 <span *ngIf="!heroe.vivo" class="badge bg-danger">Muerto</span>
-            <!-- <td>{{ heroe.nombre }}</td> -->
+            <td> <!-- Va entrre llaves cuadradad el routerLik cuando hay que procesar informacion -->
+                    <button
+                     class="btn btn-info mr-1"
+                        [routerLink]="['/heroe', heroe.id]">
+                        <i class="fas fa-pen"></i>
+                    </button>
+                    <button class="btn btn-danger "
+                        (click)="borrarHeroe(heroe,i)">
+                        <i class="fas fa-dumpster-fire"></i>
+                    </button>
+
+            </td>
         </tr>
     </tbody>
 </table>
 
-<div class="alert alert-info text-center mt-3" role="alert">
+<div 
+*ngIf="cargando"
+class="alert alert-info text-center mt-3" role="alert">
     <h4 class="alert-heading">Cargando</h4>
     <p>
         <i class="fas fa-sync-alt fa-spin fa-2x"></i>
@@ -40,7 +53,8 @@
     </p>
 </div>
 
-<div class="alert alert-warning text-center mt-3" role="alert">
+<div  *ngIf="!cargando && heroes.length === 0"
+class="alert alert-warning text-center mt-3" role="alert">
     <h4 class="alert-heading">No hay registros</h4>
     <p>
         <i class="fas fa-exclamation fa-2x"></i>
